fixed footer but not responsive

--- a/styles/main.2.css
+++ b/styles/main.2.css
@@ -115,19 +115,20 @@ header .logo {
 
 /* Footer Nav, starting from mobile */
 footer {
+    width: 100%;
+    height: auto;
+    background-color: #64798c;
+    padding: 50px 20px;
+}
+
+footer .theme-wrap {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 100%;
-    height: auto;
-    background-color: #64798c;
-    padding: 1px 20px;
-}
-
-footer .theme-wrap {
-    width: fit-content;
     max-width: 1080px;
+    margin: 0 auto;
 }
 
 footer h2 {
@@ -272,9 +273,9 @@ footer .socials {
 
 #featured .content {
     width: 100%;
-    height: 100%;
     position: relative;
-    margin: 40px 0;
+    margin: 40px 0px;
+    padding: 0 10px;
 }
 
 #featured .content h3 {
